Fixed gap on first location

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -338,6 +338,10 @@ footer{
   text-align: center;
 }
 
+#first_location{
+  padding-top: 0;
+}
+
 .post_image {
   width: -webkit-calc(70% - 4px);
   width: -moz-calc(70% - 4px);
